--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,18 @@ dependencies:
   flutter_local_notifications: ^16.0.0+1
   shared_preferences: ^2.2.1
   intl: ^0.18.1
+  android_alarm_manager_plus: ^3.0.3
+  google_fonts: ^4.0.4
+  firebase_auth: ^4.11.1
+  firebase_core: ^2.19.0
+  cloud_firestore: ^4.11.0
+  flashy_tab_bar2: ^0.0.6
+  firebase_storage: ^11.4.0
+  image_picker: ^1.0.4
+  path: ^1.8.3
+  path_provider: ^2.1.1
+  cached_network_image: ^3.3.0
+  flutter_form_builder: ^9.1.1
 
 dev_dependencies:
   flutter_test:
